--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@ HealthCheck : This is v1 running in pod [[${host.name}]] ([[${host.ip}]])
 		</ul>
 	</div>
 	
-	<h4 class="g-top">방명록 v2 ( 배황 ) build trigger second </h4>
+	<h4 class="g-top"> 방명록v3 (hytkim) web hook trigger </h4>
 	<div class="top-img">
 		<img src="/bg-guestbook.jpg">
 	</div>
@@ -46,5 +46,6 @@ HealthCheck : This is v1 running in pod [[${host.name}]] ([[${host.ip}]])
 </body>
 
 </html>
+
 
 
