--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 <link href="/common.css" rel="stylesheet">
 <link href="/guestbook.css" rel="stylesheet">
 
-<title> tt 방명록 (K8S)</title>
+<title> 방1명2록 (K8S)</title>
 </head>
 <body>
 	<div class="guestbook list displaynone" style="display: block;">
@@ -46,6 +46,7 @@ HealthCheck : This is v1 running in pod [[${host.name}]] ([[${host.ip}]])
 </body>
 
 </html>
+
 
 
 
